# canopy-detection

./: .gitignore  README.md  filter_submission.py  main.py  pyproject.toml  startup.md  sweep.yaml  sweep_cv.yaml  test_skewed_eval_cached.py  verify_optimization.py  visualize_segmentations.py
scripts/: debug_evaluate.py  evaluate.py  evaluate_v1.py  evaluate_v2.py  evaluate_v3.py  evaluate_v4.py  inference_yolo.py  segment.py  to_yolo.py  to_yolo_cv.py  visualize_submission.py  yolo_sweep.py  yolo_sweep_cv.py  yolo_train.py
